# haskell-adhoc

./: README.md
cats4progs/: Makefile  cats4progs.cabal
cats4progs/app/: Main.hs
cats4progs/src/: Chapter1.hs
cl-hask/: Makefile  cl-hask.cabal  stack.yaml
cl-hask/app/: Main.hs
cndt/: Makefile  cndt.cabal
cndt/app/: Main.hs
conc/: Makefile  conc.cabal  stack.yaml
conc/app/: Main.hs
conc/src/: Channel.hs  STmonad.hs  TVars.hs  Thrds.hs
conc/test/: ChannelTest.hs  Spec.hs
diags/: Makefile  diags.cabal
diags/app/: Main.hs
erbic/: Makefile  README  erbic.cabal  exp2.hs  exp3.hs  experim.hs
erbic/app/: Main.hs
erbic/src/: Adhoc.hs  Graph.hs  Httpd.hs  NTo.hs  ScanMsg.hs  Sock.hs  SockMsg.hs  SockMsgService.hs  To.hs
erbic/src/Erbic/Data/Msg/: ScanMsg.hs
erbic/src/Erbic/IO/: Fork.hs
erbic/src/Erbic/In/ConsoleService/: ConsoleMsgService.hs
erbic/src/Erbic/In/SockService/: Sock.hs  SockMsg.hs  SockMsgService.hs  SockMsgService2.hs
erbic/test/: MonadicProp.hs  ScanMsgProp.hs  Test.hs
erbic/test/Erbic/Data/Msg/: ScanMsgProp.hs
fakelivy/: Makefile  fakelivy.cabal
fakelivy/app/: Main.hs
fakelivy/src/Model/: Rest.hs
ffi/: Makefile  ffi.cabal  stack.yaml
ffi/app/: Main.hs  my-external.c  my-external.h
gravity/: Makefile  gravity.cabal  s1.xml
gravity/app/: Main.hs
gui-spike/: Makefile  gui-spike.cabal
gui-spike/app/: Main.hs
gui-spike/src/: EdtInvoice.hs  Invoice.hs
lenses/: Makefile  lenses.cabal
lenses/app/: Main.hs
lenses/src/: Lib.hs
portable/: Main.hs  Makefile
sbox/: Makefile  sbox.cabal  stack.yaml
sbox/app/: Main.hs
sbox/src/: AhAeson.hs  Flog.hs  JavaParse.hs  MndsIO.hs  MultiMap.hs  MyFree.hs  Parse.hs  Qc.hs  Qq.hs  RankN.hs  Runner.hs  Spike.hs  Tc.hs  Tvars.hs  TypFams.hs
scripting/: Makefile  scripting.cabal
scripting/app/: Main.hs
secrels/: Makefile  secrels.cabal  stack.yaml
secrels/app/: Main.hs
srvnt/: Makefile  srvnt.cabal  stack.yaml
srvnt/app/: Main.hs
srvnt/src/: ApiType.hs  SrvSpike.hs
table2tree/: Makefile  loop-test.sh  table2tree.cabal
table2tree/app/: Main.hs
table2tree/src/: Lib.hs  Main.hs
table2tree/test/: LibTest.hs  Spec.hs
