name:                erbic
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/erbic#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graph
                     , Adhoc
                     , Httpd
                     , Erbic.Data.Msg.ScanMsg
                     , Erbic.IO.Fork
                     , Erbic.In.SockService.Sock
                     , Erbic.In.SockService.SockMsg
                     , Erbic.In.SockService.SockMsgService2
                     , Erbic.In.ConsoleService.ConsoleMsgService
                     , To
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , mtl
                     , containers
                     , psqueues
                     , network
                     , split
                     , random
                     , text
                     , BoundedChan
                     , pretty-show
                     , QuickCheck
  default-language:    Haskell2010

executable erbic
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , erbic
                     , mtl
                     , containers
                     , BoundedChan
                     , network
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , erbic
                     , split
                     , QuickCheck
  other-modules:       Erbic.Data.Msg.ScanMsgProp
                     , Dummy
                     , MonadicProp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/erbic
