name:                sbox
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/sbox#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AhAeson
                     , Parse
                     , MndsIO
                     , Qq
                     , Tvars
                     , Spike
                     , MultiMap
                     , Flog
                     , Runner
                     , JavaParse
                     , Qc
                     , RankN
  build-depends:       base >= 4.7 && < 5
                     , free
                     , aeson
                     , text
                     , containers
                     , unordered-containers
                     , wreq
                     , template-haskell
                     , http-client
                     , random
                     , lens
--                     , hzk
                     , mtl
                     , time
                     , parsec
                     , clock
                     , interpolatedstring-perl6
                     , stm
                     , language-java
                     , fast-logger
                     , QuickCheck
  default-language:    Haskell2010

executable sbox
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -optl-static -optl-pthread
  build-depends:       base
                     , mtl
                     , sbox
                     , criterion
                     , QuickCheck
  default-language:    Haskell2010

test-suite sbox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sbox
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sbox
